--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.paradox</groupId>
 	<artifactId>save-money</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1-PRE</version>
 	<name>Save Money API</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
