--- a/.gtilab-ci.yml
+++ b/.gtilab-ci.yml
@@ -32,4 +32,4 @@ docker-build-push:
     - docker build -t $DOCKER_IMAGE:$TAG .
     - docker push $DOCKER_IMAGE:$TAG
   rules:
-    - if: $CI_COMMIT_BRANCH == "docker-integ"  # Run only on main branch
+    - if: $CI_COMMIT_BRANCH == "main"  # Run only on main branch
