--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ cache:
 
 build:
   stage: build
-  image: maven:3.8.6-openjdk-17
+  image: maven:3.9.9-eclipse-temurin-21-noble
   script:
     - mvn clean package -DskipTests
 
