--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=Save Money API
+server.port=8080
+server.address=0.0.0.0
 
 ### H2 Database ###
 spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
-spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=a
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
