--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.h2.console.enabled=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.defer-datasource-initialization=true
+
+### API Values ###
+api.supabase.url=${SUPABASE_DB_URL}
+api.supabase.key=${SUPABASE_API_KEY}
