Add readme containing instructions for local setup.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Prevent local profile from being committed ###
+src/main/resources/application-local.properties
