--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.defer-datasource-initialization=true
 
 ### API Values ###
-api.supabase.url=${SUPABASE_DB_URL}
-api.supabase.key=${SUPABASE_API_KEY}
+api.supabase.url=${SUPABASE_DB_URL:dummy_url}
+api.supabase.key=${SUPABASE_API_KEY:dummy_key}
