--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.paradox</groupId>
 	<artifactId>save-money</artifactId>
-	<version>0.0.3-PRE</version>
+	<version>0.0.4-PRE</version>
 	<name>Save Money API</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
@@ -63,6 +63,10 @@
 			<artifactId>h2</artifactId>
 			<version>2.3.232</version>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
