Remove update item endpoint.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.jpa.defer-datasource-initialization=true
 ### API Values ###
 api.supabase.url=${SUPABASE_DB_URL:dummy_url}
 api.supabase.key=${SUPABASE_API_KEY:dummy_key}
+
+### Jackson ###
+spring.jackson.deserialization.fail-on-unknown-properties=true
