--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,9 @@ spring.jpa.defer-datasource-initialization=true
 api.supabase.url=${SUPABASE_DB_URL:dummy_url}
 api.supabase.key=${SUPABASE_API_KEY:dummy_key}
 
+### AUTH Values ###
+api.auth.url=${AUTH_URL:dummy_url}
+api.auth.key=${AUTH_DB_URL:dummy_key}
+
 ### Jackson ###
 spring.jackson.deserialization.fail-on-unknown-properties=true
