--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ api.supabase.key=${SUPABASE_API_KEY:dummy_key}
 
 ### AUTH Values ###
 api.auth.url=${AUTH_URL:dummy_url}
-api.auth.key=${AUTH_DB_URL:dummy_key}
+api.auth.key=${AUTH_API_KEY:dummy_key}
