--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ build:
   image: maven:3.9.9-eclipse-temurin-21-noble
   script:
     - mvn clean package
-  artifacts: # pass artifacts to next stage
+  artifacts:
     paths:
       - target/*.jar
       - Dockerfile
@@ -26,7 +26,7 @@ build:
     access: all
     expire_in: 1 hour
   rules:
-    - if: $CI_COMMIT_BRANCH == "main"  # Run only on main branch
+    - if: $CI_COMMIT_BRANCH == "main"
 
 docker-build-push:
   stage: docker
@@ -36,13 +36,15 @@ docker-build-push:
   variables:
     DOCKER_HOST: tcp://docker:2376
     DOCKER_TLS_CERTDIR: "/certs"
-    DOCKER_BUILDKIT: 1 # Enable BuildKit for better secret handling
   dependencies:
-    - build # Fetch artifacts from build stage
+    - build
   before_script:
-    - docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
+    - echo "Logging in to Docker Hub"
+    - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_PASSWORD"
   script:
-    - docker docker build -t $DOCKER_IMAGE:$TAG .
-    - docker push $DOCKER_IMAGE:$TAG
+    - echo "Building Docker image: $DOCKER_IMAGE:$TAG"
+    - docker build -t "$DOCKER_IMAGE:$TAG" .
+    - echo "Pushing Docker image"
+    - docker push "$DOCKER_IMAGE:$TAG"
   rules:
-    - if: $CI_COMMIT_BRANCH == "main"  # Run only on main branch
+    - if: $CI_COMMIT_BRANCH == "main"
