--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ api.supabase.key=${SUPABASE_API_KEY:dummy_key}
 ### AUTH Values ###
 api.auth.url=${AUTH_URL:dummy_url}
 api.auth.key=${AUTH_API_KEY:dummy_key}
+
+logging.level.com.yourpackage=DEBUG
+logging.level.org.springframework.web=DEBUG
