--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ api.supabase.key=${SUPABASE_API_KEY:dummy_key}
 api.auth.url=${AUTH_URL:dummy_url}
 api.auth.key=${AUTH_API_KEY:dummy_key}
 
-logging.level.com.yourpackage=DEBUG
+logging.level.com.paradox.savemoney=DEBUG
 logging.level.org.springframework.web=DEBUG
