Troubleshooting for railway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=Save Money API
 server.port=${PORT:8080}
 server.address=0.0.0.0
+server.forward-headers-strategy=framework
 
 ### Jackson ###
 spring.jackson.deserialization.fail-on-unknown-properties=true
