--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,20 @@
+### App Settings ###
 spring.application.name=Save Money API
 server.port=${PORT:8080}
 server.address=0.0.0.0
 server.forward-headers-strategy=framework
 
+### Logging Settings ###
+logging.level.com.paradox.savemoney=DEBUG
+logging.level.org.springframework.web=DEBUG
+
 ### Jackson ###
 spring.jackson.deserialization.fail-on-unknown-properties=true
-
-### API Values ###
-api.supabase.url=${SUPABASE_DB_URL:dummy_url}
-api.supabase.key=${SUPABASE_API_KEY:dummy_key}
 
 ### AUTH Values ###
 api.auth.url=${AUTH_URL:dummy_url}
 api.auth.key=${AUTH_API_KEY:dummy_key}
 
-logging.level.com.paradox.savemoney=DEBUG
-logging.level.org.springframework.web=DEBUG
+### Supabase API Values ###
+api.supabase.url=${SUPABASE_DB_URL:dummy_url}
+api.supabase.key=${SUPABASE_API_KEY:dummy_key}
